--- a/main.css
+++ b/main.css
@@ -2,19 +2,82 @@ body {
 	width: 50%; 
 	margin-left: auto;
 	margin-right: auto;
+	font-family: 'Droid Sans', sans-serif;
 }
 
 .header {
-	font-family: 'Droid Sans', sans-serif;
 	font-size: 38px;
+	margin-top: 16px;
 	margin-left: 8px;
+	margin-bottom: 8px;
+	display: block;
 }
-.row-1 {
-	width: 100px;
-	height: 100px;
-	display: inline-block;
-	margin: 16px 8px 8px 8px;
+
+.description {
+	font-size: 16px;
+	text-align: center;
+	line-height: 200px;
+	font-weight: bold;
+}
+
+.boxes {
+	width: 200px;
+	height: 200px;
+	display: block;
+	margin: 16px auto 16px auto;
 	padding: 8px;
 	background-color: brown;
-	
+	border-radius: 6px;
 }
+
+/*.blue {
+	background-color: rgb(42, 75, 165);
+}*/
+
+.color:hover {
+	background: rgb(42, 75, 165);
+}
+
+.slower {
+	transition: .5s ease;
+}
+
+.circle:active {
+	border-radius: 50%;
+}
+
+.triangle:hover {
+	width: 0;
+	height: 0;
+	border-left: 110px solid white;
+	border-right: 110px solid white;
+	border-bottom: 220px solid brown;
+}
+
+.rectangle:hover {
+	width: 100px;
+	height: 200px;
+}
+
+.border:hover {
+	/*width: 200px;
+	height: 200px;
+	margin: 16px auto 16px auto;
+	padding: 8px;*/
+	/*background-color: transparent;*/
+	/*border-radius: 6px;*/
+	border: 4px solid rgb(42, 75, 165);
+
+}
+
+.boxes:hover {
+
+}
+
+
+
+
+
+
+
+
