--- a/main.css
+++ b/main.css
@@ -60,19 +60,58 @@ body {
 }
 
 .border:hover {
-	/*width: 200px;
+	width: 200px;
 	height: 200px;
 	margin: 16px auto 16px auto;
-	padding: 8px;*/
+	padding: 2px;
 	/*background-color: transparent;*/
 	/*border-radius: 6px;*/
-	border: 4px solid rgb(42, 75, 165);
-
+	border: 6px solid rgb(42, 75, 165);
 }
 
-.boxes:hover {
-
+.inside-color:hover {
+	width: 200px;
+	height: 200px;
+	/*display: block;*/
+	margin: 16px auto 16px auto;
+	padding: 2px;
+	background-color: rgb(42, 75, 165);
+	border-radius: 6px;
+	border: 6px solid brown;
 }
+
+.tube {
+	width: 200px;
+	height: 30px;
+	margin: 16px auto 16px auto;
+	padding: 4px;
+	border-radius: 22px;
+	line-height: 30px;
+	border: 4px solid brown;
+	background-color: brown;
+}
+
+.inside-white:hover {
+	width: 200px;
+	height: 30px;
+	margin: 16px auto 16px auto;
+	padding: 4px;
+	border-radius: 22px;
+	line-height: 30px;
+	border: 4px solid brown;
+	background-color: white;
+}
+
+.click-circle {
+	width: 200px;
+	height: 200px;
+	margin: 16px auto 16px auto;
+	padding: 4px;
+	border-radius: 50%;
+	border: 4px solid brown;
+}
+
+
 
 
 
