--- a/main.css
+++ b/main.css
@@ -102,7 +102,7 @@ body {
 	background-color: white;
 }
 
-.click-circle {
+.big-circle:hover {
 	width: 200px;
 	height: 200px;
 	margin: 16px auto 16px auto;
@@ -110,6 +110,51 @@ body {
 	border-radius: 50%;
 	border: 4px solid brown;
 }
+
+.expand:hover {
+	width: 400px;
+	height: 30px;
+	margin: 16px auto 16px auto;
+	padding: 4px;
+	border-radius: 22px;
+	line-height: 30px;
+	border: 4px solid brown;
+	background-color: white;
+}
+
+.ball-container {
+	width: 720px;
+	height: 200px;
+	position: relative;
+	}
+
+.ball {
+  width:200px;
+  height:200px;
+  border-radius: 50%;  
+  background:brown;
+  position:absolute;
+  
+}
+
+@-webkit-keyframes rollingball{
+  0%{left:5%;}
+  50%{left:70%;}
+  100%{left:5%;}
+}
+
+
+.ball{
+  -webkit-animation:rollingball 5s infinite;
+}
+
+.slider {
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	background-color: brown;
+}
+
 
 
 
