--- a/main.css
+++ b/main.css
@@ -148,19 +148,56 @@ body {
   -webkit-animation:rollingball 5s infinite;
 }
 
-.slider {
-	width: 30px;
+.rectangle-tilt {
+
+	width: 200px;
 	height: 30px;
-	border-radius: 50%;
+	margin: 16px auto 16px auto;
+	padding: 4px;
+	border-radius: 22px;
+	line-height: 30px;
 	background-color: brown;
 }
 
+.rectangle-tilt:active {
+	-webkit-transform: rotate(25deg);
+}
 
+.box-2 {
+	width: 200px;
+	height: 200px;
+	display: block;
+	margin: 16px auto 16px auto;
+	padding: 8px;
+	background-color: brown;
+	border-radius: 6px;
+}
 
+.box-2:hover {
+	-webkit-transform: skewY(25deg);
+}
 
+/*.boxes:hover {
+	-webkit-transform: rotate(360deg);
+	transition: all 1s linear;
+}*/
 
+.spin:hover {
+	-webkit-transform: rotate(360deg);
+	transition: all 1s linear;
+}
 
+/*.large-description {
+	/*font-family: 'Droid Sans', sans-serif;*/
+	font-size: 24px;
+	text-align: center;
+	line-height: 30px;
+	font-weight: bold;
 
+}
+.large-description:hover {
+	transition: .5s ease;
+}*/
 
 
 
